# SynapseGigamapper

./: .gitignore  BatchPredictionConverter.ipynb  DR-BERT.py  ESM2&BertDownload.ipynb  ESM2.py  LICENSE  README.md  SequenceGenerator.ipynb  Training Dispatcher.ipynb  environment.yml  pyproject.toml
configs/protein_localization/: full_prot_comp_pred.json
esmc_600m/: README.md  environment_esmc.yml
esmc_600m/configs/: esmc_weight_tuning_A2.json
esmc_600m/losses/: synapse_weighted_bce.py
esmc_600m/models/: esmc_encoder.py
esmc_600m/scripts/: train_esmc.sh
notebook/: Analysis.ipynb  Predict-SyNa(1Synapse).ipynb  Predict-SyNa(2Synapse).ipynb  Predict2 - Genes_Hein_2025_&_Marc_2023(1Synapse).ipynb  Predict2 - Genes_Hein_2025_&_Marc_2023(2Synapse) .ipynb  Protein_list_lookup_and_benchmarking.ipynb  SyGi_motif_analysis.ipynb
protgps/datasets/: abstract.py  protein_compartments.py
protgps/utils/: parsing.py:Zone.Identifier
